--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-08-26  Chong Yidong  <cyd@gnu.org>
+
+	* faces.el (help-argument-name): Always inherit from italic
+	(Bug#12213).
+
 2012-08-25  Martin Rudalics  <rudalics@gmx.at>
 
 	* window.el (window--even-window-heights): Even heights when
