--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,11 @@
+2012-08-26  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* lisp.h (ASET): Remove attempt to detect side effects.
+	It was meant to be temporary and it often doesn't work,
+	because when IDX has side effects the behavior of IDX==IDX
+	is undefined.  See Stefan Monnier in
+	<http://lists.gnu.org/archive/html/emacs-devel/2012-08/msg00762.html>.
+
 2012-08-26  Barry OReilly  <gundaetiapo@gmail.com>  (tiny change)
 
 	* lisp.h (functionp): New function (extracted from Ffunctionp).
