--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,5 +1,8 @@
 2012-08-26  Paul Eggert  <eggert@cs.ucla.edu>
 
+	Spelling fixes.
+	* Makefile.in (.PHONY): versioclean -> versionclean.
+
 	Remove unused external symbols.
 	* data.c (Qcons, Qfloat, Qmisc, Qstring, Qvector):
 	* window.c (Qwindow_valid_p, decode_valid_window):
