Make special-display-* and display-buffer-reuse-frames obsolete.
* lisp/window.el (special-display-regexps, special-display-frame-alist)
(special-display-buffer-names, special-display-function)
(display-buffer-reuse-frames): Mark as obsolete.

* lisp/progmodes/compile.el: Don't use display-buffer-reuse-frames.

* help.el (help-print-return-message): Don't treat
display-buffer-reuse-frames specially.

--- a/etc/NEWS
+++ b/etc/NEWS
@@ -622,6 +622,16 @@ display action functions to avoid changing which frame is selected.
 *** New display action alist `pop-up-frame-parameters', if non-nil,
 specifies frame parameters to give any newly-created frame.
 
+*** The following variables are obsolete, as they can be replaced by
+appropriate entries in the `display-buffer-alist' function introduced
+in Emacs 24.1:
+
+**** `display-buffer-reuse-frames'
+**** `special-display-regexps'
+**** `special-display-frame-alist'
+**** `special-display-buffer-names'
+**** `special-display-function'
+
 ** Completion
 
 *** New function `completion-table-with-quoting' to handle completion
