Fix broken completion in sh-mode
See: http://debbugs.gnu.org/12220

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,5 +1,8 @@
 2012-08-27  Leo Liu  <sdl.web@gmail.com>
 
+	* progmodes/sh-script.el (sh-dynamic-complete-functions): Adapt to
+	completion-at-point.  (Bug#12220)
+
 	* skeleton.el (skeleton-untabify): Change to nil (bug#12223).
 
 	* progmodes/sh-script.el (sh-indent-comment): Change to t (bug#12267).
