--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,16 @@
+2012-08-28  Dmitry Antipov  <dmantipov@yandex.ru>
+
+	Fix usage of set_buffer_internal.
+	* buffer.h (set_buffer_internal): Make it BUFFER_INLINE.
+	* buffer.c (set_buffer_if_live): Use set_buffer_internal.
+	* coding.c (decode_coding): Omit redundant test.
+	* fileio.c (decide_coding_unwind): Likewise.
+	* fns.c (secure_hash): Likewise.
+	* insdel.c (modify_region): Likewise.
+	* keyboard.c (command_loop_1): Likewise.
+	* print.c (PRINTFINISH): Likewise.
+	* xdisp.c (run_window_scroll_functions): Use set_buffer_internal.
+
 2012-08-27  Paul Eggert  <eggert@cs.ucla.edu>
 
 	* dispnew.c: Use bool for boolean.
