--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2012-08-28  Martin Rudalics  <rudalics@gmx.at>
+
+	* window.c (Fset_window_configuration): Remove handling of
+	auto-buffer-name window parameter.
+
 2012-08-28  Dmitry Antipov  <dmantipov@yandex.ru>
 
 	Do not allow to set major mode for a dead buffer.
