--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,7 +1,8 @@
 2012-08-28  Martin Rudalics  <rudalics@gmx.at>
 
 	* window.c (Fset_window_configuration): Remove handling of
-	auto-buffer-name window parameter.
+	auto-buffer-name window parameter.  Install revision of reverted
+	fix.
 
 2012-08-28  Dmitry Antipov  <dmantipov@yandex.ru>
 
