* admin/charsets/mule-charsets.el (header): Fix typo.
* etc/charsets/MULE-ethiopic.map: Fix typo in comment.
* etc/charsets/MULE-ipa.map: Likewise.
* etc/charsets/MULE-is13194.map: Likewise.
* etc/charsets/MULE-lviscii.map: Likewise.
* etc/charsets/MULE-sisheng.map: Likewise.
* etc/charsets/MULE-tibetan.map: Likewise.
* etc/charsets/MULE-uviscii.map: Likewise.

--- a/admin/ChangeLog
+++ b/admin/ChangeLog
@@ -1,3 +1,7 @@
+2012-08-28  Andreas Schwab  <schwab@linux-m68k.org>
+
+	* charsets/mule-charsets.el (header): Fix typo.
+
 2012-08-24  Paul Eggert  <eggert@cs.ucla.edu>
 
 	On assertion failure, print backtrace if available.
