--- a/admin/ChangeLog
+++ b/admin/ChangeLog
@@ -1,3 +1,7 @@
+2012-08-28  Glenn Morris  <rgm@gnu.org>
+
+	* bzrmerge.el (bzrmerge-merges): Allow unversioned files in the tree.
+
 2012-08-28  Andreas Schwab  <schwab@linux-m68k.org>
 
 	* charsets/mule-charsets.el (header): Fix typo.
